# mvr.github.io

./: .gitignore  1--Type-Theory.1-1--Types-and-Functions.html  1--Type-Theory.1-2--Inductive-Types.html  1--Type-Theory.1-3--Universes-and-More-Inductive-Types.html  1--Type-Theory.1-4--Propositions-as-Types.html  1--Type-Theory.1-4--Record-Types-and-Copatterns.html  1--Type-Theory.1-5--Propositions-as-Types.html  1--Type-Theory.1-X--Record-Types-and-Copatterns.html  2--Paths-and-Identifications.2-1--Paths.html  2--Paths-and-Identifications.2-10--Higher-Types.html  2--Paths-and-Identifications.2-2--Equivalences-and-Path-Algebra.html  2--Paths-and-Identifications.2-3--Substitution-and-J.html  2--Paths-and-Identifications.2-4--Composition-and-Filling.html  2--Paths-and-Identifications.2-5--Transport.html  2--Paths-and-Identifications.2-6--Univalence.html  2--Paths-and-Identifications.2-7--Propositions.html  2--Paths-and-Identifications.2-8--Sets-and-Higher-Types.html  2--Paths-and-Identifications.2-8--Sets.html  2--Paths-and-Identifications.2-9--Contractible-Maps.html  3--Structures.3-1--Structure-Identity-Principle.html  3--Structures.3-2--Modalities.html  3--Structures.3-3--Constructive-Logic.html  3--Topics.3-1--Structure-Identity-Principle.html  3--Topics.3-2--Modalities.html  3--Topics.3-3--Constructive-Logic.html  404.html  ACKNOWLEDGEMENTS.html  INSTALLING_AGDA.html  Library.Prelude.html  Library.Primitive.html  Library.Univalence.html  Main.hs  README.md  UNICODE_DICTIONARY.html  USING_AGDA.html  academics.html  academics.md  archive.html  atom.xml  atom.xsl  (+16 more)
(+159 files in other folders)
