name:                mvr
version:             0.1.0.0
synopsis:            Personal website of Mitchell Riley
homepage:            http://mvr.github.io/
license:             AllRightsReserved
license-file:        LICENSE
author:              Mitchell Riley
maintainer:          mitchell.v.riley@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mvr
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5.0
                     , containers >= 0.5.5.1
                     , hakyll >= 4.6
                     , pandoc >= 1.13.1
                     , titlecase

  default-language:    Haskell2010
